<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>africa.semicolon</groupId>
	<artifactId>myEcommerce2</artifactId>
	<version>1.0-SNAPSHOT</version>

<!--	<configuration>-->
<!--		<source>1.8</source> &lt;!&ndash; or your source version &ndash;&gt;-->
<!--		<target>1.8</target> &lt;!&ndash; or your target version &ndash;&gt;-->
<!--		<compilerArgs>-->
<!--			<arg>-parameters</arg>-->
<!--		</compilerArgs>-->
<!--	</configuration>-->

	<properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<version>3.2.4</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.32</version>
			<scope>provided</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<version>3.2.4</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb</artifactId>
			<version>3.2.4</version>
		</dependency>

<!--		<dependency>-->
<!--			<groupId>de.flapdoodle.embed</groupId>-->
<!--			<artifactId>de.flapdoodle.embed.mongo.spring30x</artifactId>-->
<!--			<version>4.6.2</version>-->
<!--			<optional>true</optional>-->
<!--		</dependency>-->
	</dependencies>

</project>